[package]
name = "redactrs"
version = "0.1.0"
edition = "2021"
description = "Wrapper to avoid accidentally leaking sensitive data during printing/logging"
repository = "https://github.com/jeremyschiemann/redactrs.git"
readme = "README.md"
license-file = "LICENSE"

keywords = ["redacted", "mute", "hide", "logging", "sensitive-data"]
categories = ["development-tools", "value-formatting", "config"]

[dependencies]
