[package]
name = "redactrs"
version = "0.1.0"
edition = "2021"
description = "Wrapper to avoid accidentally leaking sensitive data during printing/logging"
repository = "https://github.com/jeremyschiemann/redactrs.git"
readme = "README.md"
license = "MIT"
rust-version = "1.63.0"
documentation = "https://docs.rs/redactrs"

keywords = ["redacted", "mute", "hide", "logging", "sensitive-data"]
categories = ["development-tools", "value-formatting", "config"]

exclude = [".github/*", "Makefile"]

[features]
default = []
serde = ["dep:serde"]

[dependencies]
serde =  { optional = true, version = "1.0.217" }

[dev-dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_derive = "1.0.217"
serde_json = "1.0.134"

